--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html>
 <head>
 	<title>My Webpage</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+		
+	</style>">
+	<style>
+		h1{
+			color: blue;
+			background-color: yellow;
+		}
+	</style>
 </head>
 <body>
 <h1>Hi NagaLakshmi,Good evening</h1>
 <h2>Hi Nanna</h2>
+<h3 id="naga">Hi Amma</h3>
 <h3>Hi Amma</h3>
-<h4>Hi Bro</h4>
+<h3>Hi Amma</h3>
+<h3 class="satti">Hi Amma</h3>
+<h4 class="satti">Hi Bro</h4>
 <h5>I am here</h5>
 <h6>Waiting for good job</h6>
 <p>
@@ -136,6 +148,7 @@ You've visited this page 5 times. Last visit: 9/2/20
 	<a href="">CSS</a>
 	<a href="">JS</a>
 	<a href="">Bootstrap</a>
+</nav>
 	<h1>Drop Down</h1>
 	<select>
 		<option>HTML</option>
@@ -144,6 +157,29 @@ You've visited this page 5 times. Last visit: 9/2/20
 		<<option>HTML5</option>}
 		option
 	</select>
-</nav>
+<h1 style="color:green;background-color: yellow">Block level tag</h1>
+<a href="" style="background-color: yellow">Click here </a>
+<a href="" style="background-color: red">submit your form </a>
+<hr>
+
+<h2  style="background-color: green">Without div tag</h2>
+<p style="background-color: green">ccording to W3C's<b> HTML documentation: "A section is a thematic </b>grouping of content, typically with a heading."</p>
+<p style="background-color: green">ccording to W3C's<i>HTML documentation: "A section is a thematic</i> grouping of content, typically with a heading."</p>
+<div style="background-color: green">
+<h2>With div tag</h2>
+<div style="background-color: green">
+	<p style="background-color: red">ccording to W3C's<span style="background-color: yellow">HTML documentation: "A section is a thematic grouping of content, typically</span>with a heading."</p>
+	<p>ccording to W3C's HTML documentation: "A section is a thematic grouping of content, typically with a heading."</p>
+</div>
+</div>
+<p>physical tags<b>are used to provide the visual apperance</b> for the normal form</p>
+<p>physical tags are <i>used to provide the visual apperance for the</i> normal form</p>
+<p>physical tags are<u>used to provide the visual apperance for the</u>normal form</p>
+</body>
+<p>physical<strong> tags are used to provide the visual apperance for</strong> the normal form</p>
+<p>physical<em> tags are used to provide the visual apperance</em> for the normal form</p>
+<p>physical <mark>tags are used to provide</mark> the visual apperance for the normal form</p>
+<p>physical <sub> tags are used to provide the visual apperance</sub> for the normal form</p>
+<p>physical <mark>tags are used to provide</mark> <sup>the visual apperance for the</sup> normal form</p>
 </body>
 </html>
