--- a/reactjs/website/card.html
+++ b/reactjs/website/card.html
@@ -114,7 +114,7 @@
   </div>
   <!--Footer-->
   <div class="copy">
-  	<h1>All Copy Rights From NagaLashmi .B @2020</h1>
+  	<h1 style="color:#ffff">All Copy Rights From NagaLashmi .B @2020</h1>
   </div>
 </body>
 </html>
