--- a/reactjs/website/card.html
+++ b/reactjs/website/card.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta name="description" content="profilecard">
 	<meta name="viewport" content="width=device-width,intial-scale=1.0">
 	<link rel="icon" href="img.jpg">
 	<h1 style="text-align: center;color: maroon"> My Works</h1>
@@ -81,40 +82,39 @@
 <body>
 	<div class="header">
 		<div class="left"></div>
-		<img src="India.jpg" width="200px" height="200px" alt="profile">
-		<div class="right"></div>
-	</div>
+		<img src="img.jpg" width="200px" height="200px" alt="profile">
 	<div class="right">
 		<h1 style="color: blue;text-align: center">NagaLakshmi B</h1>
-		<h2 style="color: blue;text-align: center">Reactjs</h2>
-		<h3 style="color:blue;text-align: center">nag@gmail.com</h3>
+		<h1 style="color: blue;text-align: center">Reactjs</h1>
+		<h1 style="color:blue;text-align: center">nag@gmail.com</h1>
 	</div>
   <div class="profile">
      <div class="card">
-     	<img src="img.jpg" width="100px" height="100px" alt="profilecard">
+     	<img src="img.jpg" width="200px" height="200px" alt="profilecard">
      	<h1 style="color: green">Google icon</h1>
      	<hr>
-     	<h3>Every one know</h3>
+     	<h3>Rajahmundry</h3>
      	     	<button><a href="#">View</a></button>
      </div>
      <div class="card">
-     	<img src="ml.jpg" width="100px" height="100px" alt="profilecard">
+     	<img src="img.jpg" width="200px" height="200px" alt="profilecard">
      	<h1 style="color: pink">Mechine learning icon</h1>
      	<hr>
-     	<h3>Hi I am learn</h3>
+     	<h3>Rajanagaram</h3>
      	     	<button><a href="#">View</a></button>
      </div>
      <div class="card">
-     	<img src="India.jpg" width="100px" height="100px" alt="profilecard">
+     	<img src="img.jpg" width="200px" height="200px" alt="profilecard">
      	<h1 style="color: teal">India icon</h1>
      	<hr>
-     	<h3>Love my country</h3>
+     	<h3>Guntur</h3>
      	<button><a href="#">View</a></button>
      </div>  	
   </div>
   <!--Footer-->
-  <div class="copy">
-  	<h1 style="color:#ffff">All Copy Rights From NagaLashmi .B @2020</h1>
+  <div class="copy">                                                       
+
+  	<h1 style="color:#ffffff">                                                                                                             All Copy Rights From NagaLashmi .B @2020</h1>
   </div>
 </body>
 </html>
