--- a/Task/task1.html
+++ b/Task/task1.html
@@ -7,12 +7,12 @@
 
 	<style type="text/css">
 		.profile{
-			display: flex;
+			/*display: flex;*/
 			width: 80%;
 			border-style: dotted;
 			border-color: blue;
 			padding: 1%;
-			margin: 1%;
+			margin: 8%;
 		}
 		.profile>div,.section{
 			padding: 1%;
@@ -49,6 +49,7 @@
 				display: flex;
 				flex-direction: column;
 				max-width: 100%;
+				margin: 8px;
 				/*flex-wrap: wrap;*/
 
 			}
@@ -113,14 +114,14 @@
    	<figure>
    		<img src="card.png" width="200px" height="200px" border="2px" border-color="solid blue">
    		<figcaption><h1>Sathi</h1>
-   		<h1>Satti123@gmail.com</h1></figcaption>
+   		<h2>Satti123@gmail.com</h2></figcaption>
    		<button><a href="resume1.html" >View Semantic</a></button>
    	</figure>
    	</div>
    	<div class="card">
    		<img src="card.png" width="200px" height="200px" border="2px">
    		<h1>Lakshmi</h1>
-   		<h1>laxmi35@gmail.com</h1>
+   		<h2>laxmi35@gmail.com</h2>
    		<button><a href="resume2.html">View NonSemantic</a></button>
    	</div>
  
