--- a/reactjs/website/card.html
+++ b/reactjs/website/card.html
@@ -12,12 +12,12 @@
 			width: 100%;
 			border: 2px solid blue;
 			padding: 1%;
-			margin: 1%;
+			margin: 8%;
 		}
 		.profile>div{
 			padding: 1%;
 			margin: 1%;
-			width: 30%;
+			width: 100%;
 			border: 20px solid maroon;
 			text-align: center;
 			box-shadow: 6px 6px 6px 6px;
@@ -26,7 +26,7 @@
 		img{
 			border-radius: 15%;
 			border: 2px solid maroon;
-
+       
 		}
 		button{
 			box-shadow: 2px 2px 2px 2px;
@@ -56,15 +56,16 @@
 	margin: 1%;
 	
 }
-/*Tab View*/
-		@media only screen and (min-width:320px) and (max-width:480px)	{
+	/*Tab View*/
+	@media only screen and (min-width:320px) and (max-width:480px)	{
 			body{
-				background-color: blue;
+				background-color: lightyellow;
 			}
 			.profile,.header{
 				display: flex;
 				flex-direction: column;
 				max-width: 100%;
+				margin: 8px;
 				/*flex-wrap: wrap;*/
 
 			}
@@ -127,9 +128,9 @@
 		<div class="left">
 		<img src="img.jpg" width="200px" height="200px" alt="profile"></div>
 	<div class="right">
-		<h1 style="color: blue";>NagaLakshmi B</h1>
-		<h1 style="color: blue;">Reactjs</h1>
-		<h1 style="color:blue;">nag@gmail.com</h1>
+		<h2 style="color: blue";>NagaLakshmi B</h2>
+		<h2 style="color: blue;">Reactjs</h2>
+		<h2 style="color:blue;">nag@gmail.com</h2>
 	</div>
 </div>
 	<h1 style="text-align: center; color: maroon">My Works</h1>
