--- a/Task/resume1.html
+++ b/Task/resume1.html
@@ -44,10 +44,11 @@
 .row {margin: 0 -5px;}
 
 /* Clear floats after the columns */
-.row:after {
+.row::after {
   content: "";
   display: table;
   clear: both;
+  box-sizing: inherit;
 }
 
 
@@ -60,6 +61,7 @@
 				display: flex;
 				flex-direction: column;
 				max-width: 100%;
+				margin: 8px;
 				/*flex-wrap: wrap;*/
 
 			}
